# PhotoView

./: .gitignore  AGENTS.md  PRODUCT_ITERATION.md  PROGRESS.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  cloudflare-pages.yml  release.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  LAUNCH_FIRST_USERS.md  PERFORMANCE.md  TODO.md  plan.md
landing/: README.md  en.html  index.html
landing/en/: index.html
landing/zh/: index.html
scripts/bench/: create-fixtures.mjs
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  duplicates.rs  errors.rs  lib.rs  main.rs  models.rs  paths.rs  tasks.rs  viewer.rs  watcher.rs
src-tauri/src/commands/: data.rs  system.rs
src-tauri/src/db/: mod.rs  repositories.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/thumbs/: mod.rs
src/lib/: app-utils.test.ts  app-utils.ts
src/test/: setup.ts
