[package]
name = "photoview"
version = "0.1.0"
description = "A local image viewer and collection manager"
authors = ["DreamStronger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photoview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
walkdir = "2.5.0"
sha2 = "0.11.0"
notify = "8.2.0"
trash = "5.2.6"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
image = "0.25.10"
kamadak-exif = "0.6.1"
tauri-plugin-clipboard-manager = "2.3.2"

[dev-dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
